--- a/V3.2-Servidor-Server/V3.2-Servidor-Server/V3.2-Servidor-Server.csproj
+++ b/V3.2-Servidor-Server/V3.2-Servidor-Server/V3.2-Servidor-Server.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{68923DB8-6032-4EC6-BFCA-50053CB11C70}</ProjectGuid>
+    <ProjectGuid>{DFCD7A69-6147-488C-8327-F164C5BD536B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>V3._1_Servidor_Client</RootNamespace>
-    <AssemblyName>V3.1-Servidor-Client</AssemblyName>
+    <RootNamespace>V3._2_Servidor_Server</RootNamespace>
+    <AssemblyName>V3.2-Servidor-Server</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
